Add volume boost options to volume adaptation setting

--- a/ui/i18n/src/main/res/values/strings.xml
+++ b/ui/i18n/src/main/res/values/strings.xml
@@ -124,11 +124,14 @@
     <string name="retry_label">Retry</string>
     <string name="auto_download_label">Include in auto downloads</string>
     <string name="auto_delete_label">Auto delete episode</string>
-    <string name="feed_volume_reduction">Volume reduction</string>
-    <string name="feed_volume_reduction_summary">Turn down volume for episodes of this podcast: %1$s</string>
+    <string name="feed_volume_adapdation">Volume adaptation</string>
+    <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
     <string name="feed_volume_reduction_off">Off</string>
-    <string name="feed_volume_reduction_light">Light</string>
-    <string name="feed_volume_reduction_heavy">Heavy</string>
+    <string name="feed_volume_reduction_light">Light Reduction</string>
+    <string name="feed_volume_reduction_heavy">Heavy Reduction</string>
+    <string name="feed_volume_boost_light">Light Boost</string>
+    <string name="feed_volume_boost_medium">Medium Boost</string>
+    <string name="feed_volume_boost_heavy">Heavy Boost</string>
     <string name="feed_auto_download_always">Always</string>
     <string name="feed_auto_download_never">Never</string>
     <string name="feed_new_episodes_action_add_to_inbox">Add to inbox</string>
